# library-inspection-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: library.h
src/: circle.c  internal.h  point.c  rectangle.c  sphere.c
test/: inspection.c  point.test.c
tests/: CMakeLists.txt
tests/src/: _api_inspection.c  api_coverage.c  circle.test.c  main.c  point.test.c  rectangle.test.c
